--- a/css/extras.css
+++ b/css/extras.css
@@ -1,4 +1,4 @@
-canvas {
+/* canvas {
     display: block;
     position: fixed;
     top: 0;
@@ -9,7 +9,7 @@ canvas {
 .customContainer {
     max-width: 512px !important;
 }
-
+*/
 
 /* Set the default font family to Bebas Neue */
 
